include_directories(${CMAKE_SOURCE_DIR}/src)

add_executable(vector3_add_sub_test vector_add_sub_test.cpp)
target_link_libraries(vector3_add_sub_test pbr)

add_executable(vector3_add_sub_int_test vector_add_sub_int_test.cpp)
target_link_libraries(vector3_add_sub_int_test pbr)

add_executable(vector3_mul_div_test vector_mul_div_test.cpp)
target_link_libraries(vector3_mul_div_test pbr)

add_executable(vector3_mul_div_int_test vector_mul_div_int_test.cpp)
target_link_libraries(vector3_mul_div_int_test pbr)

add_executable(vector3_geometry geometry.cpp)
target_link_libraries(vector3_geometry pbr)

add_executable(coordinate_system coordinate_system.cpp)
target_link_libraries(coordinate_system pbr)

add_test(NAME vector3_add_sub_test COMMAND vector3_add_sub_test)
add_test(NAME vector3_add_sub_int_test COMMAND vector3_add_sub_int_test)
add_test(NAME vector3_mul_div_test COMMAND vector3_mul_div_test)
add_test(NAME vector3_mul_div_int_test COMMAND vector3_mul_div_int_test)
add_test(NAME vector3_geometry COMMAND vector3_geometry)
add_test(NAME coordinate_system COMMAND coordinate_system)
